<resources>
    <string name="app_name">GitHub Users</string>
    <string name="img_desc_avatar">The avatar of the user</string>
    <string name="user_name">Name</string>
    <string name="user_username">\@username</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_title">Enter a name</string>
    <string name="username">\@username</string>
    <string name="location">City, Country</string>
    <string name="description_icon_for_location">Icon for location</string>
    <string name="description">This is the description</string>
    <string name="html_url">https://github.com/url</string>
    <string name="repo_name">Repo Name</string>

    <!--  VIEW PAGER  -->
    <string name="tab_repo">Repositories</string>
    <string name="tab_followings">Followings</string>
    <string name="tab_followers">Followers</string>
    <string name="number1">256</string>
    <string name="number2">24</string>
    <string name="number3">323</string>
    <string name="no_repos">There are no public repos</string>
    <string name="private_following">This user\'s following is private</string>
    <string name="private_follower">This user\'s follower is private</string>
    <string name="no_following">This user has no following</string>
    <string name="no_follower">This user has no follower</string>
    <string name="no_user_found">No user found</string>
    <string name="favorites">Favorites</string>
    <string name="description_favorite">An icon for favorite.</string>
    <string name="description_favorite_icon">Favorite Icon</string>
    <string name="followings_not_found">Followings not found</string>
    <string name="repositories_failed_to_load">Repositories failed to load.</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="preferences">Preferences</string>
    <string name="no_favorite_user">No favorite user found</string>
</resources>