<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@tools:sample/avatars"
        android:layout_marginTop="48dp"
        android:layout_marginStart="24dp"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Font.Header"
        app:layout_constraintTop_toTopOf="@+id/img_avatar"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        android:layout_marginStart="16dp"
        android:text="@string/user_name"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Font.Body.Light"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        android:layout_marginStart="16dp"
        android:text="@string/username"/>

    <ImageView
        android:id="@+id/ic_location"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:src="@drawable/ic_location_filled"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        android:contentDescription="@string/description_icon_for_location" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Font.Captions.Blue"
        app:layout_constraintTop_toTopOf="@+id/ic_location"
        app:layout_constraintBottom_toBottomOf="@+id/ic_location"
        app:layout_constraintStart_toEndOf="@+id/ic_location"
        android:layout_marginStart="2dp"
        android:text="@string/location"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Font.Body"
        app:layout_constraintTop_toBottomOf="@+id/tv_location"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/description"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        android:layout_marginTop="16dp"
        android:background="?attr/colorPrimary"
        app:tabTextColor="@color/blue"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>